Switch dashboard plugins to use standard deb building now
Change-Id: I1def213e2010e78b790e74bdc8079610e2803592

--- a/python.yaml
+++ b/python.yaml
@@ -394,7 +394,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -424,7 +424,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
