Add trove postgres 11.3 image
Change-Id: I246d52554b0477ebc8e39395455cf741907185b9

--- a/images.yaml
+++ b/images.yaml
@@ -79,6 +79,11 @@
       - 'image-build-trove-{name}'
 
 - project:
+    name: postgresql-11.3-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-trove-{name}'
+
+- project:
     name: rstudio-ubuntu-18.04-x86_64
     jobs:
       - 'image-build-extra-{name}':
