--- a/images.yaml
+++ b/images.yaml
@@ -74,6 +74,11 @@
       - 'image-build-trove-{name}'
 
 - project:
+    name: mysql-8.0-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-trove-{name}'
+
+- project:
     name: postgresql-9.6-ubuntu-16.04-x86_64
     jobs:
       - 'image-build-trove-{name}'
