--- a/python.yaml
+++ b/python.yaml
@@ -730,3 +730,6 @@
       - '{name}-os-xenial-deb-package':
          access: 'anonymous'
          organisation: 'resplat-cloud'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'resplat-cloud'
