--- a/tempest.yaml
+++ b/tempest.yaml
@@ -88,13 +88,14 @@
           echo "                   AZ:    $AVAILABILITY_ZONE"
           echo "                   HOST:  $HOST"
           echo "                   TARGET_HOST: $TARGET_HOST"
+          echo "                   BLOCK_MIGRATION: $BLOCK_MIGRATION"
           echo
           echo "================================================================="
           echo
           . /opt/tempest/bin/activate
           tmpdir=`mktemp -d --suffix=_tempest`
           cd $WORKSPACE/tempest
-          ./setup_tempest.py --host $HOST --target_host $TARGET_HOST -s $AVAILABILITY_ZONE -e $CLOUD -j check-compute-host-advanced $tmpdir
+          ./setup_tempest.py --host $HOST --target_host $TARGET_HOST --block_migration $BLOCK_MIGRATION -s $AVAILABILITY_ZONE -e $CLOUD -j check-compute-host-advanced $tmpdir
           cd $tmpdir
           stestr run --serial --whitelist-file $WORKSPACE/tempest/whitelists/check-compute-host-advanced.yaml 2>&1 | grep --line-buffered -vE ' \w+Warning: |self._sock = None'
           RET=${PIPESTATUS[0]}
@@ -136,11 +137,15 @@
                 - Host must be in AVAILABILITY_ZONE; if not nova will return a 'No Valid Host' error.<br>
                 - Leave blank to let scheduler choose a host.
       - string:
-          name: 'TARGET HOST'
+          name: 'TARGET_HOST'
           description: |
                 Nova target host used by migration tests. <br>
                 - Host must be in AVAILABILITY_ZONE; if not nova will return a 'No Valid Host' error.<br>
                 - Leave blank to let scheduler choose a host.
+      - bool:
+          name: 'BLOCK_MIGRATION'
+          default: false
+          description: "Whether to enable block migration during live migration. (Should enable it when no shared storage)"
     properties:
       - authorization:
           'nobody':
