--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -957,3 +957,52 @@
       - ssh-agent-credentials:
           users:
               - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
+
+
+
+- job-template:
+    name: tempest-trove-{name}-check
+    defaults: global
+    node: tempest
+    concurrent: true
+    scm:
+      - git:
+         url: ssh://review.rc.nectar.org.au:29418/internal/nectar-testing.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+    builders:
+      - tempest-trove-check:
+          datastore: '{datastore}'
+    parameters:
+      - choice:
+          name: 'CLOUD'
+          choices:
+            - production
+            - testing
+            - development
+          description: "Cloud to run tempest on (Production, Test, Dev). Leave as Production if unsure."
+      - choice:
+          name: 'AVAILABILITY_ZONE'
+          choices:
+            - auckland
+            - intersect-01
+            - melbourne-qh2
+            - melbourne-qh2-uom
+            - monash-01
+            - monash-02
+            - monash-03
+            - nci
+            - qld
+            - sa
+            - swinburne-01
+            - tasmania
+            - tasmania-s
+            - coreservices
+            - qh2-test
+            - cn
+            - elk
+          description: 'Availability zone.'
+    properties:
+      - authorization:
+          'nobody':
+            - job-read
+            - job-discover
