Add tempest-heat-check job
Change-Id: I2901473f44ada4a0aa01a2dcc02e21c2d26feb78

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -556,6 +556,12 @@
       - 'tempest-{name}-check':
          whitelist: 'trove'
 
+- project:
+    name: heat
+    jobs:
+      - 'tempest-{name}-check':
+         whitelist: 'heat'
+
 - job:
     name: tempest-designate-check
     defaults: global
