slack notification on change-merged-event jobs
Change-Id: I7c03804aa4da1364e616f208abc4dabc181c63fe

--- a/ci.yaml
+++ b/ci.yaml
@@ -154,6 +154,8 @@
     builders:
       - jenkins-jobs-update
 
+    publishers:
+        !include: publisher.yaml.inc
 
 - project:
     name: nectar-ci
@@ -164,4 +166,3 @@
           access: 'anonymous'
       - '{name}-jenkins-jobs-update':
           access: 'anonymous'
-
