slack notification on change-merged-event jobs
Change-Id: I7c03804aa4da1364e616f208abc4dabc181c63fe

--- a/ci.yaml
+++ b/ci.yaml
@@ -1,3 +1,7 @@
+!include: publisher.yaml.inc
+
+
+
 - job-template:
     name: '{name}-ruby-lint'
     defaults: global
@@ -154,6 +158,8 @@
     builders:
       - jenkins-jobs-update
 
+    publishers:
+      <<: *slack_notifier
 
 - project:
     name: nectar-ci
