slack notification on change-merged-event jobs
Change-Id: I7c03804aa4da1364e616f208abc4dabc181c63fe

--- a/ci.yaml
+++ b/ci.yaml
@@ -154,6 +154,7 @@
     builders:
       - jenkins-jobs-update
 
+      <<: *slack_notifier
 
 - project:
     name: nectar-ci
@@ -164,4 +165,3 @@
           access: 'anonymous'
       - '{name}-jenkins-jobs-update':
           access: 'anonymous'
-
