--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -310,6 +310,14 @@
           command: r10k-cleanup.sh $GERRIT_PATCHSET_REVISION
 
 - builder:
+    name: r10k-diff-catalog-control-repo
+    builders:
+      - ssh-builder:
+          ssh-user-ip: puppet@r10k.mgmt.rc.nectar.org.au:22
+          command: |
+            r10k-diff-catalog.py test-control-repo $GERRIT_PROJECT $GERRIT_PATCHSET_REVISION
+
+- builder:
     name: tempest-check-whitelist
     builders:
       - shell: |
@@ -323,3 +331,4 @@
           RET=${{PIPESTATUS[0]}}
           rm -rf $tmpdir
           exit $RET
+
