New octocatalog-diff job
Also add job to puppet-site-rctest repo

Change-Id: I6d3e97446a8489a4eca2d0107e29585ba5ad5b7d

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -701,6 +701,9 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+      - '{name}-octocatalog-diff':
+         access: 'nobody'
+         organisation: 'internal'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
