--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -988,7 +988,6 @@
               - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
 
 
-
 - job-template:
     name: tempest-{name}-check
     defaults: global
@@ -1036,3 +1035,64 @@
           'nobody':
             - job-read
             - job-discover
+
+
+- job-template:
+    name: '{name}-r10k-diff-catalog'
+    defaults: global
+    node: upgrader
+    quiet-period: 10
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+
+    triggers:
+      - gerrit:
+          trigger-on:
+            - patchset-created-event:
+                exclude-no-code-change: true
+            - change-restored-event
+            - comment-added-contains-event:
+                 comment-contains-value: 'recheck'
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: '{organisation}/{name}'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
+          silent: false
+          escape-quotes: true
+
+          skip-vote:
+            successful: true
+            failed: true
+            unstable: true
+            notbuilt: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/{organisation}/{name}.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: true
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - r10k-diff-catalog-control-repo
+
+    wrappers:
+      - ssh-agent-credentials:
+          users:
+              - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
