--- a/python.yaml
+++ b/python.yaml
@@ -725,6 +725,14 @@
          environment: 'pep8'
 
 - project:
+    name: telemetry-tempest-plugin
+    jobs:
+      - '{name}-xenial-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+
+- project:
     name: uom-cloud-dashboard
     jobs:
       - '{name}-os-tox-{environment}':
