--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -32,6 +32,13 @@
           ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
           command: /var/lib/puppet/librarian/bin/puppet-librarian-install.sh
 
+- builder:
+    name: internal-hieradata-deploy
+    builders:
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
+          command: /usr/local/sbin/deploy-internal-hieradata.sh
+
 
 - builder:
     name: puppet-lint
