Automate deployment of internal/hieradata
Change-Id: I2e259511ef6f8edcc641681fee423c8006ad46ad

--- a/other.yaml
+++ b/other.yaml
@@ -130,6 +130,63 @@
       !include: publisher.yaml.inc
 
 
+- job:
+    name: 'global-hieradata-deploy'
+    defaults: global
+    node: upgrader
+    quiet-period: 20
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+
+    triggers:
+      - gerrit:
+          trigger-on:
+              - change-merged-event
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: 'internal/hieradata'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
+          silent: false
+          escape-quotes: true
+
+          skip-vote:
+            successful: true
+            failed: true
+            unstable: true
+            notbuilt: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/internal/hieradata.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: true
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - ssh-builder:
+          ssh-user-ip: puppet@puppet.mgmt.rc.nectar.org.au:22
+          command: /usr/local/sbin/deploy-internal-hieradata.sh
+
+    publishers:
+      !include: publisher.yaml.inc
+
+
 - project:
     name: nectar-testing
     jobs:
