--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1096,6 +1096,7 @@
       - ssh-agent-credentials:
           users:
               - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
+      - ansicolor
 
 
 - job-template:
