Add r10k-diff-catalog job for nectar environment
Change-Id: Ibf5653c8d1cd589e5eb2fb54b79a367e4513fac8

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -627,6 +627,9 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
+      - '{name}-r10k-diff-catalog':
+         access: 'nobody'
+         organisation: 'internal'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
