Add the cleanup job trigger for compute host check
Change-Id: I3779545711547bd2877b13b60adfed2694a96931

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -68,6 +68,10 @@
           'nobody':
             - job-read
             - job-discover
+    publishers:
+      - trigger:
+          project: 'tempest-cleanup-operator'
+          threshold: 'FAILURE'
 
 - job:
     name: tempest-compute-host-check-advanced
@@ -152,6 +156,10 @@
           'nobody':
             - job-read
             - job-discover
+    publishers:
+      - trigger:
+          project: 'tempest-cleanup-operator'
+          threshold: 'FAILURE'
 
 - job:
     name: tempest-cinder-check
@@ -1448,5 +1456,6 @@
       - build-blocker:
           blocking-jobs:
             - "^.*tempest-compute-host-check"
+            - "^.*tempest-compute-host-check-advanced"
           block-level: 'GLOBAL'
           queue-scanning: 'ALL'
