Add manila tempest tests
Change-Id: I9e4efcaceef76f9eab3f3dc37144c8fcea4d42c3

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -572,6 +572,24 @@
          whitelist: 'heat'
 
 - project:
+    name: manila-scenario
+    jobs:
+      - 'tempest-{name}-check':
+          whitelist: 'manila'
+
+- project:
+    name: manila-nfs
+    jobs:
+      - 'tempest-{name}-check':
+          whitelist: 'manila-nfs'
+
+- project:
+    name: manila-cephfs
+    jobs:
+      - 'tempest-{name}-check':
+          whitelist: 'manila-cephfs'
+
+- project:
     name: glance-scenario
     jobs:
       - 'tempest-{name}-check-site-agnostic':
