Add swift tempest scenario test
Change-Id: Ie48965e0550a6cad9a171a6b0fa0eced3e794b17

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -595,6 +595,12 @@
       - 'tempest-{name}-check-site-agnostic':
          whitelist: 'glance'
 
+- project:
+    name: swift-scenario
+    jobs:
+      - 'tempest-{name}-check-site-agnostic':
+         whitelist: 'swift'
+
 - job:
     name: tempest-designate-check
     defaults: global
