Remove build area before building packages
Incase a package has already built on the slave we want
a clean build area so we can save all artifacts in the
dir on completion and not have previous package builds
included.

Change-Id: I1b57cce56e864cb37912de56f9d4e47244393a19

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -139,6 +139,7 @@
       - shell: |
           export DEBFULLNAME="$GIT_AUTHOR_NAME"
           export DEBEMAIL="$GIT_AUTHOR_EMAIL"
+          rm -rf $WORKSPACE/build-area/
           hivemind packaging.buildpackage --os-release {os_release}
 
 - builder:
@@ -147,6 +148,7 @@
       - shell: |
           export DEBFULLNAME="$GIT_AUTHOR_NAME"
           export DEBEMAIL="$GIT_AUTHOR_EMAIL"
+          rm -rf $WORKSPACE/build-area/
           hivemind packaging.buildpackage --os-release {os_release} --no-upload
 
 - builder:
@@ -160,6 +162,7 @@
       - shell: |
           export DEBFULLNAME="$GIT_AUTHOR_NAME"
           export DEBEMAIL="$GIT_AUTHOR_EMAIL"
+          rm -rf $WORKSPACE/build-area/
           hivemind packaging.buildpackage
 
 # Temp to support xenial-queens
@@ -175,6 +178,7 @@
       - shell: |
           export DEBFULLNAME="$GIT_AUTHOR_NAME"
           export DEBEMAIL="$GIT_AUTHOR_EMAIL"
+          rm -rf $WORKSPACE/build-area/
           hivemind packaging.buildpackage --ubuntu-release xenial
 
 - builder:
