Create branch named r10k_diff_catalog_<env> on merge
In Change I28c018c95e19242731ebfa80633204a3a1503d86 we introduce a way
to test changes to puppet-librarian. This requires us to be able to
create a dynamic environment for each site.

These dynamic environments needs to have a unique name across all site
(control repo). The trick to do it is, for each control repo, to create
a branch named r10k_diff_catalog_<env> pointing to HEAD of master.

r10k will then create environments based on these branches. So for
environments rctest, nectar, melbourne, it will create
branches/environments r10k_diff_catalog_rctest, r10k_diff_catalog_nectar
and r10k_diff_catalog_melbourne.

Change-Id: I47ebf8c497deb7d0b8e72e0612c9fa3e4ef1027f

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -286,6 +286,7 @@
     name: r10k-deploy
     builders:
       - shell: |
+          # strips 'internal/puppet-site-nectar' to 'puppet-site-nectar'
           REPO=`echo $GERRIT_PROJECT | cut -f2 -d'/'`
           # Creates repo to hold r10k branches if it doesn't exist
           respcode=`curl -H "Authorization: token $TOKEN" "https://git.rc.nectar.org.au/api/v1/repos/r10k/${REPO}" -w "%{http_code}" -o /dev/null -s`
@@ -306,12 +307,16 @@
     name: r10k-cleanup
     builders:
       - shell: |
+          # strips 'internal/puppet-site-nectar' to 'puppet-site-nectar'
           REPO=`echo $GERRIT_PROJECT | cut -f2 -d'/'`
+          # strips 'puppet-site-nectar' to 'nectar'
+          PUPPET_ENV=`echo $REPO | cut -f3 -d'-'`
           git remote | grep 'r10k' > /dev/null && retval=0 || retval=1
           if [ $retval -eq 1 ]; then
             git remote add r10k git@git.rc.nectar.org.au:r10k/$REPO
           fi
           git push r10k origin/master:refs/heads/master
+          git push r10k origin/master:refs/heads/r10k_diff_catalog_${PUPPET_ENV}
           git ls-remote | grep "refs/changes/.*/${GERRIT_CHANGE_NUMBER}/" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
       - ssh-builder:
           ssh-user-ip: puppet@r10k.mgmt.rc.nectar.org.au:22
