Add melbournetest env to octocatalog diff test
Change-Id: I36927dbdf54db3fc4b88eaf3e78be7f32df49015

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -564,6 +564,9 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
+      - '{name}-r10k-diff-catalog':
+         access: 'nobody'
+         organisation: 'resplat-cloud'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
