Add py36 check for nectar-metrics
Change-Id: I88e2e2f7fb2fb95358a8e77be2f25710c377eaef

--- a/python.yaml
+++ b/python.yaml
@@ -78,6 +78,10 @@
       - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
          access: 'anonymous'
