--- a/python.yaml
+++ b/python.yaml
@@ -665,6 +665,21 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: sahara-dashboard
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: sahara-tests
     jobs:
       - '{name}-xenial-tox-{environment}':
