Remove tiny, add xxlarge flavor test
Change-Id: Ic513bd2cf6c12fc471a26a06e9499a78b906a7e1

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1279,12 +1279,12 @@
 - project:
     name: tempest-nagios-flavor
     flavor:
-        - tiny
         - xsmall
         - small
         - medium
         - large
         - xlarge
+        - xxlarge
     jobs:
       - 'tempest-nagios-flavor-{flavor}-{test}':
           test:
