--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1273,12 +1273,12 @@
 - project:
     name: tempest-nagios-flavor
     flavor:
-        - tiny
         - xsmall
         - small
         - medium
         - large
         - xlarge
+        - xxlarge
     jobs:
       - 'tempest-nagios-flavor-{flavor}-{test}':
           test:
