add yaml-lint for melbourne nodes
Change-Id: Ib47c51cdba8548fc779b6d6715f6162b24809c99

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -532,6 +532,9 @@
 - project:
     name: puppet-site-melbourne
     jobs:
+      - '{name}-yaml':
+         access: 'nobody'
+         organisation: 'resplat-cloud'
       - '{name}-puppet-unit':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -551,6 +554,9 @@
 - project:
     name: puppet-site-melbournetest
     jobs:
+      - '{name}-yaml':
+         access: 'nobody'
+         organisation: 'resplat-cloud'
       - '{name}-puppet-unit':
          access: 'nobody'
          organisation: 'resplat-cloud'
